--- a/vs/Stm8Ida.vcxproj.filters
+++ b/vs/Stm8Ida.vcxproj.filters
@@ -13,6 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\makefile.linux" />
-    <None Include="..\st8.cfg" />
+    <None Include="..\stm8.cfg" />
   </ItemGroup>
 </Project>
