--- a/vs/ida_base.props
+++ b/vs/ida_base.props
@@ -2,8 +2,8 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <IDA_DIR>C:\Program Files (x86)\IDA 6.5\</IDA_DIR>
-    <IDASDK_DIR>c:\src\idasdk65\</IDASDK_DIR>
+    <IDA_DIR>D:\Tools\IDA 7.0\</IDA_DIR>
+    <IDASDK_DIR>D:\SDK\idasdk70\</IDASDK_DIR>
   </PropertyGroup>
   <PropertyGroup>
     <TargetExt>.w32</TargetExt>
