--- a/stm8.cfg
+++ b/stm8.cfg
@@ -1461,6 +1461,7 @@ area BSS RESERVED        0x05800:0x06000
 area DATA BOOTROM        0x06000:0x06800
 area BSS RESERVED        0x06800:0x07F00
 area DATA REGS1          0x07F00:0x08000
+area CODE INT_VECTS      0x08000:0x08080
 ;area CODE VECS1          0x08000:0x08080
 ;area CODE CODE1          0x08080:0x09000
 ;area CODE VECS2          0x09000:0x09080
