--- a/stm8.cfg
+++ b/stm8.cfg
@@ -38,6 +38,411 @@
 .default
 
 
+.STM8S105K6
+; https://www.st.com/resource/en/datasheet/stm8s105k6.pdf
+; 2Kibytes RAM - 0x0000:0x07FF
+; 32Kbytes Flash - 0x8000:0xFFFF
+
+; MEMORY MAP
+area DATA RAM            0x000000:0x000800
+area DATA reserved       0x000800:0x004000
+area DATA EEPROM         0x004000:0x004400
+area DATA reserved       0x004400:0x004800
+area DATA OPTION_BYTES   0x004800:0x004900
+area DATA reserved       0x004900:0x005000
+area DATA HW_REGS        0x005000:0x005800
+area DATA reserved       0x005800:0x006000
+area CODE BOOTROM        0x006000:0x006800
+area DATA reserved       0x006800:0x007F00
+area DATA C_S_D_I_REGS   0x007F00:0x008000
+area CODE INT_VECTS      0x008000:0x008080
+area CODE FLASH          0x008080:0x010000
+
+; Interrupt and reset vector assignments
+entry RESET                0x8000   Reset
+entry TRAP                 0x8004   TRAP (software) interrupt vector
+entry TLI                  0x8008   External Top Level Interrupt
+entry AWU                  0x800C   AWU
+entry CLK_CONTR            0x8010   Clock controller
+entry EXTI0                0x8014   Port A external interrupt
+entry EXTI1                0x8018   Port B external interrupt
+entry EXTI2                0x801C   Port C external interrupt
+entry EXTI3                0x8020   Port D external interrupt
+entry EXTI4                0x8024   Port E external interrupt
+;entry Reserved8028         0x8028
+;entry Reserved802C         0x802C
+entry SPI                  0x8030   SPI End of transfer
+entry TIM1                 0x8034   Update/overflow/trigger/break
+entry TIM1_C               0x8038   Capture/Compare
+entry TIM2                 0x803C   Update/overflow
+entry TIM2_C               0x8040   Capture/Compare
+entry TIM3                 0x8044   Update/overflow
+entry TIM3_C               0x8048   Capture/Compare
+;entry Reserved804C         0x804C
+;entry Reserved8050         0x8050
+entry I2C                  0x8054   I2C Interrupt
+entry UART2_RX             0x8058   TX complete
+entry UART2_TX             0x805C   RX register full
+entry ADC1                 0x8060   ADC End of conversion
+entry TIM4                 0x8064   Update/overflow
+entry EEPROM               0x8068   End of programming/write in not allowed area
+
+
+; OPTION BYTES
+
+OPT0_ROP    0x4800 Readout protection register
+OPT1_UBC    0x4801 User boot code
+NOPT1_UBC   0x4802 Complement
+OPT2_AFR    0x4803 Alternate function remapping
+NOPT2_AFR   0x4804 Complement
+OPT3_MISC   0x4805 Misc. option
+NOPT3_MISC  0x4806 Complement
+OPT4_CLK    0x4807 Clock option
+NOPT4_CLK   0x4808 Complement
+OPT5_HSE    0x4809 HSE clock startup
+NOPT5_HSE   0x480A Complement
+OPT6        0x480B Reserved
+NOPT6       0x480C Complement
+OPT7        0x480D Reserved
+NOPT7       0x480E Complement
+OPTBL       0x487E Bootloader option
+NOPTBL      0x487F Complement
+
+
+; INPUT/OUTPUT PORTS
+
+;/* Port A */
+;/*****************************************************************/
+PA_ODR 0x5000 Port A data output latch register
+PA_IDR 0x5001 Port A input pin value register
+PA_DDR 0x5002 Port A data direction register
+PA_CR1 0x5003 Port A control register 1
+PA_CR2 0x5004 Port A control register 2
+
+;/* Port B */
+;/*****************************************************************/
+PB_ODR 0x5005 Port B data output latch register
+PB_IDR 0x5006 Port B input pin value register
+PB_DDR 0x5007 Port B data direction register
+PB_CR1 0x5008 Port B control register 1
+PB_CR2 0x5009 Port B control register 2
+
+;/* Port C */
+;/*****************************************************************/
+PC_ODR 0x500a Port C data output latch register
+PC_IDR 0x500b Port C input pin value register
+PC_DDR 0x500c Port C data direction register
+PC_CR1 0x500d Port C control register 1
+PC_CR2 0x500e Port C control register 2
+
+;/* Port D */
+;/*****************************************************************/
+PD_ODR 0x500f Port D data output latch register
+PD_IDR 0x5010 Port D input pin value register
+PD_DDR 0x5011 Port D data direction register
+PD_CR1 0x5012 Port D control register 1
+PD_CR2 0x5013 Port D control register 2
+
+;/* Port E */
+;/*****************************************************************/
+PE_ODR 0x5014 Port E data output latch register
+PE_IDR 0x5015 Port E input pin value register
+PE_DDR 0x5016 Port E data direction register
+PE_CR1 0x5017 Port E control register 1
+PE_CR2 0x5018 Port E control register 2
+
+;/* Port F */
+;/*****************************************************************/
+PF_ODR 0x5019 Port F data output latch register
+PF_IDR 0x501a Port F input pin value register
+PF_DDR 0x501b Port F data direction register
+PF_CR1 0x501c Port F control register 1
+PF_CR2 0x501d Port F control register 2
+
+;/* Port G */
+;/*****************************************************************/
+PG_ODR 0x501e Port G data output latch register
+PG_IDR 0x501f Port G input pin value register
+PG_DDR 0x5020 Port G data direction register
+PG_CR1 0x5021 Port G control register 1
+PG_CR2 0x5022 Port G control register 2
+
+;/* Port H */
+;/*****************************************************************/
+PH_ODR 0x5023 Port H data output latch register
+PH_IDR 0x5024 Port H input pin value register
+PH_DDR 0x5025 Port H data direction register
+PH_CR1 0x5026 Port H control register 1
+PH_CR2 0x5027 Port H control register 2
+
+;/* Port I */
+;/*****************************************************************/
+PI_ODR 0x5028 Port I data output latch register
+PI_IDR 0x5029 Port I input pin value register
+PI_DDR 0x502A Port I data direction register
+PI_CR1 0x502B Port I control register 1
+PI_CR2 0x502C Port I control register 2
+
+;/* Flash */
+;/*****************************************************************/
+FLASH_CR1   0x505A Flash control register 1
+FLASH_CR2   0x505B Flash control register 2
+FLASH_NCR2  0x505C Flash complementary control register 2
+FLASH_FPR   0x505D Flash protection register
+FLASH_NFPR  0x505E Flash complementary protection register
+FLASH_IAPSR 0x505F Flash in-application programming status register
+FLASH_PUKR  0x5062 Flash Program memory unprotection register
+FLASH_DUKR  0x5064 Data EEPROM unprotection register
+
+;/* External Interrupt Control Register (ITC) */
+;/*****************************************************************/
+EXTI_CR1   0x50A0 External interrupt control register 1
+EXTI_CR2   0x50A1 External interrupt control register 2
+
+;/* Reset (RST) */
+;/*****************************************************************/
+RST_SR    0x50B3 Reset status register
+
+;/* Clock Control (CLK) */
+;/*****************************************************************/
+CLK_ICKR      0x50C0 Internal clock control register
+CLK_ECKR      0x50C1 External clock control register
+CLK_CMSR      0x50C3 Clock master status register
+CLK_SWR       0x50C4 Clock master switch register
+CLK_SWCR      0x50C5 Clock switch control register
+CLK_CKDIVR    0x50C6 Clock divider register
+CLK_PCKENR1   0x50C7 Peripheral clock gating register 1
+CLK_CSSR      0x50C8 Clock security system register
+CLK_CCOR      0x50C9 Configurable clock control register
+CLK_PCKENR2   0x50CA Peripheral clock gating register 2
+CLK_HSITRIMR  0x50CC HSI clock calibration trimming register
+CLK_SWIMCCR   0x50CD SWIM clock control register
+
+;/* Window Watchdog (WWDG) */
+;/*****************************************************************/
+WWDG_CR     0x50D1 WWDG Control Register
+WWDG_WR     0x50D2 WWDR Window Register
+
+;/* Independent Watchdog (IWDG) */
+;/*****************************************************************/
+IWDG_KR    0x50E0 IWDG Key Register
+IWDG_PR    0x50E1 IWDG Prescaler Register
+IWDG_RLR   0x50E2 IWDG Reload Register
+
+;/* AWU */
+;/*****************************************************************/
+AWU_CSR1   0x50F0 AWU control/status register 1
+AWU_APR    0x50F1 AWU asynchronous prescaler buffer register
+AWU_TBR    0x50F2 AWU timebase selection register
+
+;/* Beeper (BEEP) */
+;/*****************************************************************/
+BEEP_CSR   0x50F3 BEEP Control/Status Register
+
+;/* Serial Peripheral Interface (SPI) */
+;/*****************************************************************/
+SPI_CR1    0x5200 SPI Control Register 1
+SPI_CR2    0x5201 SPI Control Register 2
+SPI_ICR    0x5202 SPI Interrupt Control Register
+SPI_SR     0x5203 SPI Status Register
+SPI_DR     0x5204 SPI Data Register
+SPI_CRCPR  0x5205 SPI CRC Polynomial Register
+SPI_RXCRCR 0x5206 SPI Rx CRC Register
+SPI_TXCRCR 0x5207 SPI Tx CRC Register
+
+;/* I2C Bus Interface (I2C) */
+;/*****************************************************************/
+I2C_CR1    0x5210 I2C control register 1
+I2C_CR2    0x5211 I2C control register 2
+I2C_FREQR  0x5212 I2C frequency register
+I2C_OARL   0x5213 I2C Own address register low
+I2C_OARH   0x5214 I2C Own address register high
+I2C_DR     0x5216 I2C data register
+I2C_SR1    0x5217 I2C status register 1
+I2C_SR2    0x5218 I2C status register 2
+I2C_SR3    0x5219 I2C status register 3
+I2C_ITR    0x521A I2C interrupt control register
+I2C_CCRL   0x521B I2C Clock control register low
+I2C_CCRH   0x521C I2C Clock control register high
+I2C_TRISER 0x521D I2C TRISE register
+I2C_PECR   0X521E I2C packet error checking register
+
+;/* LIN Universal asynch receiver transmitter 2 (UART) */
+;/*****************************************************************/
+UART2_SR   0x5240 UART Status Register
+UART2_DR   0x5241 UART Data Register
+UART2_BRR1 0x5242 UART Baud Rate Register 1
+UART2_BRR2 0x5243 UART Baud Rate Register 2
+UART2_CR1  0x5244 UART Control Register 1
+UART2_CR2  0x5245 UART Control Register 2
+UART2_CR3  0x5246 UART Control Register 3
+UART2_CR4  0x5247 UART Control Register 4
+UART2_CR6  0x5249 UART Control Register 6
+UART2_GTR  0x524A UART Guard time register
+UART2_PSCR 0x524B UART Prescaler register
+
+;/* 16-Bit Timer 1 (TIM1) */
+;/*****************************************************************/
+TIM1_CR1   0x5250 TIM1 Control register 1
+TIM1_CR2   0x5251 TIM1 Control register 2
+TIM1_SMCR  0x5252 TIM1 Slave Mode Control register
+TIM1_ETR   0x5253 TIM1 external trigger register
+TIM1_IER   0x5254 TIM1 Interrupt enable register
+TIM1_SR1   0x5255 TIM1 Status register 1
+TIM1_SR2   0x5256 TIM1 Status register 2
+TIM1_EGR   0x5257 TIM1 Event Generation register
+TIM1_CCMR1 0x5258 TIM1 Capture/Compare mode register 1
+TIM1_CCMR2 0x5259 TIM1 Capture/Compare mode register 2
+TIM1_CCMR3 0x525A TIM1 Capture/Compare mode register 3
+TIM1_CCMR4 0x525B TIM1 Capture/Compare mode register 4
+TIM1_CCER1 0x525C TIM1 Capture/Compare enable register 1
+TIM1_CCER2 0x525D TIM1 Capture/Compare enable register 2
+TIM1_CNTRH 0x525E TIM1 Counter High
+TIM1_CNTRL 0x525F TIM1 Counter Low
+TIM1_PSCRH 0x5260 TIM1 Prescaler Register High
+TIM1_PSCRL 0x5261 TIM1 Prescaler Register Low
+TIM1_ARRH  0x5262 TIM1 Auto-Reload Register High
+TIM1_ARRL  0x5263 TIM1 Auto-Reload Register Low
+TIM1_RCR   0x5264 TIM1 Repetition counter register
+TIM1_CCR1H 0x5265 TIM1 Capture/Compare Register 1 High
+TIM1_CCR1L 0x5266 TIM1 Capture/Compare Register 1 Low
+TIM1_CCR2H 0x5267 TIM1 Capture/Compare Register 2 High
+TIM1_CCR2L 0x5268 TIM1 Capture/Compare Register 2 Low
+TIM1_CCR3H 0x5269 TIM1 Capture/Compare Register 3 High
+TIM1_CCR3L 0x526A TIM1 Capture/Compare Register 3 Low
+TIM1_CCR4H 0x526B TIM1 Capture/Compare Register 4 High
+TIM1_CCR4L 0x526C TIM1 Capture/Compare Register 4 Low
+TIM1_BKR   0x526D TIM1 Break register
+TIM1_DTR   0x526E TIM1 Dead-time register
+TIM1_OISR  0x526F TIM1 Output idle state register
+
+;/* 16-Bit Timer 2 (TIM2) */
+;/*****************************************************************/
+TIM2_CR1   0x5300 TIM2 Control register 1
+TIM2_IER   0x5301 TIM2 Interrupt enable register
+TIM2_SR1   0x5302 TIM2 Status register 1
+TIM2_SR2   0x5303 TIM2 Status register 2
+TIM2_EGR   0x5304 TIM2 Event Generation register
+TIM2_CCMR1 0x5305 TIM2 Capture/Compare mode register 1
+TIM2_CCMR2 0x5306 TIM2 Capture/Compare mode register 2
+TIM2_CCMR3 0x5307 TIM2 Capture/Compare mode register 2
+TIM2_CCER1 0x5308 TIM2 Capture/Compare enable register 1
+TIM2_CCER2 0x5309 TIM2 Capture/Compare enable register 2
+TIM2_CNTRH 0x530A TIM2 Counter High
+TIM2_CNTRL 0x530B TIM2 Counter Low
+TIM2_PSCR  0x530C TIM2 Prescaler register
+TIM2_ARRH  0x530D TIM2 Auto-Reload Register High
+TIM2_ARRL  0x530E TIM2 Auto-Reload Register Low
+TIM2_CCR1H 0x530F TIM2 Capture/Compare Register 1 High
+TIM2_CCR1L 0x5310 TIM2 Capture/Compare Register 1 Low
+TIM2_CCR2H 0x5311 TIM2 Capture/Compare Register 2 High
+TIM2_CCR2L 0x5312 TIM2 Capture/Compare Register 2 Low
+TIM2_CCR3H 0x5313 TIM2 Capture/Compare Register 3 High
+TIM2_CCR3L 0x5314 TIM2 Capture/Compare Register 3 Low
+
+;/* 16-Bit Timer 3 (TIM3) */
+;/*****************************************************************/
+TIM3_CR1   0x5320 TIM3 Control register 1
+TIM3_IER   0x5321 TIM3 Interrupt enable register
+TIM3_SR1   0x5322 TIM3 Status register 1
+TIM3_SR2   0x5323 TIM3 Status register 2
+TIM3_EGR   0x5324 TIM3 Event Generation register
+TIM3_CCMR1 0x5325 TIM3 Capture/Compare mode register 1
+TIM3_CCMR2 0x5326 TIM3 Capture/Compare mode register 2
+TIM3_CCER1 0x5327 TIM3 Capture/Compare enable register 1
+TIM3_CNTRH 0x5328 TIM3 Counter High
+TIM3_CNTRL 0x5329 TIM3 Counter Low
+TIM3_PSCR  0x532A TIM3 Prescaler register
+TIM3_ARRH  0x532B TIM3 Auto-Reload Register High
+TIM3_ARRL  0x532C TIM3 Auto-Reload Register Low
+TIM3_CCR1H 0x532D TIM3 Capture/Compare Register 1 High
+TIM3_CCR1L 0x532E TIM3 Capture/Compare Register 1 Low
+TIM3_CCR2H 0x532F TIM3 Capture/Compare Register 2 High
+TIM3_CCR2L 0x5330 TIM3 Capture/Compare Register 2 Low
+
+;/* 8-Bit  Timer 4 (TIM4) */
+;/*****************************************************************/
+TIM4_CR1  0x5340 TIM4 Control Register 1
+TIM4_IER  0x5341 TIM4 Interrupt Enable Register
+TIM4_SR   0x5342 TIM4 Status Register
+TIM4_EGR  0x5343 TIM4 Event Generation Register
+TIM4_CNTR 0x5344 TIM4 Counter
+TIM4_PSCR 0x5345 TIM4 Prescaler Register
+TIM4_ARR  0x5346 TIM4 Auto-Reload Register
+
+;/* Analog to digital converter (ADC) */
+;/*****************************************************************/
+ADC_DBxR   0x53E0 ADC data buffer
+ADC_CSR    0x5400 ADC control/status register
+ADC_CR1    0x5401 ADC Configuration register 1
+ADC_CR2    0x5402 ADC Configuration register 2
+ADC_CR3    0x5403 ADC Configuration register 3
+ADC_DRH    0x5404 ADC Data Register High
+ADC_DRL    0x5405 ADC Data Register Low
+ADC_TDRH   0x5406 ADC Schmitt trigger disable register High
+ADC_TDRL   0x5407 ADC Schmitt trigger disable register Low
+ADC_HTRH   0x5408 ADC high threshold register high
+ADC_HTRL   0x5409 ADC high threshold register low
+ADC_LTRH   0x540A ADC low threshold register high
+ADC_LTRL   0x540B ADC low threshold register low
+ADC_AWSRH  0x540C ADC analog watchdog status register high
+ADC_AWSRL  0x540D ADC analog watchdog status register low
+ADC_AWCRH  0x540E ADC analog watchdog control register high
+ADC_AWCRL  0x540F ADC analog watchdog control register low
+
+;/* Accessible debug mode only registers CPU(1) */
+;/*****************************************************************/
+A     0x7F00 Accumulator
+PCE   0x7F01 Program counter extended
+PCH   0x7F02 Program counter high
+PCL   0x7F03 Program counter low
+XH    0x7F04 X index register high
+XL    0x7F05 X index register low
+YH    0x7F06 Y index register high
+YL    0x7F07 Y index register low
+SPH   0x7F08 Stack pointer high
+SPL   0x7F09 Stack pointer low
+CC    0x7F0A Condition code register
+
+;/* Global configuration register (CFG) */
+;/*****************************************************************/
+CFG_GCR 0x7F60 CFG Global configuration register
+
+;/* Interrupt Software Priority Registers (ITC) */
+;/*****************************************************************/
+ITC_SPR1 0x7F70 Interrupt Software priority register 1
+ITC_SPR2 0x7F71 Interrupt Software priority register 2
+ITC_SPR3 0x7F72 Interrupt Software priority register 3
+ITC_SPR4 0x7F73 Interrupt Software priority register 4
+ITC_SPR5 0x7F74 Interrupt Software priority register 5
+ITC_SPR6 0x7F75 Interrupt Software priority register 6
+ITC_SPR7 0x7F76 Interrupt Software priority register 7
+ITC_SPR8 0x7F77 Interrupt Software priority register 8
+
+;/* SWIM */
+;/*****************************************************************/
+SWIM_CSR  0x7F80  SWIM control status register
+
+;/* DM */
+;/*****************************************************************/
+DM_BK1RE  0x7F90  DM breakpoint 1 register extended byte
+DM_BK1RH  0x7F91  DM breakpoint 1 register high byte
+DM_BK1RL  0x7F92  DM breakpoint 1 register low byte
+DM_BK2RE  0x7F93  DM breakpoint 2 register extended byte
+DM_BK2RH  0x7F94  DM breakpoint 2 register high byte
+DM_BK2RL  0x7F95  DM breakpoint 2 register low byte
+DM_CR1    0x7F96  DM debug module control register 1
+DM_CR2    0x7F97  DM debug module control register 2
+DM_CSR1   0x7F98  DM debug module control/status register 1
+DM_CSR2   0x7F99  DM debug module control/status register 2
+DM_ENFCTR 0x7F9A  DM enable function register
+
+
+
+
+
+
+
 .STM8S103F3
 
 ; MEMORY MAP
@@ -793,7 +1198,7 @@ TMU_CSR 0x5808 Temporary memory unprotection control and status register
 
 
 .STM8L151x8
-; http://www.st.com/internet/com/TECHNICAL_RESOURCES/TECHNICAL_LITERATURE/DATASHEET/CD00284933.pdf
+; https://www.st.com/resource/en/datasheet/stm8l152r8.pdf
 ; 4Kbytes RAM - 0x0000:0x0FFF
 ; 32Kbytes Flash? - 0x8000:0xFFFF
 
@@ -2165,6 +2570,11 @@ DM_CR2    0x7f97 DM Debug module control register 2
 DM_CSR1   0x7f98 DM Debug module control/status register 1
 DM_CSR2   0x7f99 DM Debug module control/status register 2
 DM_ENFCTR 0x7f9a DM enable function register
+
+
+
+
+
 
 
 .STM8S005K6
